去除多余